--- a/styles/variables/_variables.scss
+++ b/styles/variables/_variables.scss
@@ -11,7 +11,7 @@ $pale-blue: hsl(226, 100%, 87%);
 
 //pricing component background
 $white: hsl (0, 0%, 100%);
-//Main component
+//Main background
 $very-pale-blue: hsl(230, 100%, 99%);
 //Empty Slider Bar
 $light-grayish-blue: hsl(224, 65%, 95%);
