--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -17,4 +17,5 @@ body{
     background-image: url("/images/bg-pattern.svg");
     background-repeat: no-repeat;
     background-position: top left;
+    padding: 4rem 1rem 0 1rem;
 }
