--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,3 +2,5 @@
 @import "./global/global";
 @import "./global/typography";
 @import "./components/header";
+@import "./components/pricing";
+@import "./components/range";
