--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,7 @@ body {
   background-image: url("/images/bg-pattern.svg");
   background-repeat: no-repeat;
   background-position: top left;
+  background-size: 100vw 50vh;
   padding: 4rem 1rem 0 1rem;
 }
 
