--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -18,11 +18,21 @@ body{
     background-repeat: no-repeat;
     background-position: top left;
     background-size: 100vw 50vh;
-    padding: 4rem 1rem 0 1rem;
+    padding: 4rem 1rem 2rem 1rem;
 }
 
 .sr-only{
     position: absolute;
     left: -99999rem;
     opacity: 0;
+}
+
+.hide-for-mobile{
+    @media screen and (max-width: 1120px){
+        display: none;
+    }
+}
+
+ul{
+    list-style: none;
 }
