--- a/styles/main.css
+++ b/styles/main.css
@@ -19,13 +19,23 @@ body {
   background-repeat: no-repeat;
   background-position: top left;
   background-size: 100vw 50vh;
-  padding: 4rem 1rem 0 1rem;
+  padding: 4rem 1rem 2rem 1rem;
 }
 
 .sr-only {
   position: absolute;
   left: -99999rem;
   opacity: 0;
+}
+
+@media screen and (max-width: 1120px) {
+  .hide-for-mobile {
+    display: none;
+  }
+}
+
+ul {
+  list-style: none;
 }
 
 h1 {
@@ -63,8 +73,10 @@ p {
   background-color: white;
   border-radius: 15px;
   text-align: center;
-  padding: 2.5rem 1.5rem;
+  padding: 2.5rem 1rem;
   margin-top: 2.5rem;
+  -webkit-box-shadow: 1px 1px 15px 1px rgba(0, 0, 0, 0.08);
+          box-shadow: 1px 1px 15px 1px rgba(0, 0, 0, 0.08);
 }
 
 .pricing__views {
@@ -72,5 +84,172 @@ p {
   color: #858fad;
   font-weight: 600;
   letter-spacing: 2px;
+}
+
+.pricing__amount {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 2rem;
+  color: #293356;
+}
+
+.pricing__amount span:last-child {
+  font-size: 1rem;
+  color: #858fad;
+  font-weight: 600;
+  margin-left: .6rem;
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+}
+
+.pricing hr {
+  margin: 2rem 0;
+  margin-left: -1rem;
+  margin-right: -1rem;
+  color: rgba(133, 143, 173, 0.15);
+}
+
+.pricing__benefits li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #858fad;
+  margin: .5rem 0;
+}
+
+.pricing__benefits li img {
+  margin-right: .5rem;
+}
+
+.pricing button {
+  margin-top: 2rem;
+}
+
+.fakeRange {
+  width: 100%;
+  height: .55rem;
+  border-radius: 150rem;
+  margin: 2.5rem 0;
+  position: relative;
+  background-color: #eaeefb;
+}
+
+.fakeRange span {
+  display: block;
+}
+
+.fakeRange__fill {
+  width: 55%;
+  height: 100%;
+  background-color: #a5f3eb;
+  border-radius: inherit;
+}
+
+.fakeRange__thumb {
+  height: 3rem;
+  width: 3rem;
+  background-color: #10d5c2;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background-image: url("../../images/icon-slider.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 60%;
+  -webkit-box-shadow: 0 9px 16px 6px rgba(16, 213, 194, 0.35);
+          box-shadow: 0 9px 16px 6px rgba(16, 213, 194, 0.35);
+  cursor: pointer;
+}
+
+.fakeRange__thumb:hover {
+  background-color: #12edd7;
+}
+
+.fakeRange__thumb:active {
+  background-color: #41f1df;
+}
+
+.slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  font-weight: 600;
+  margin-top: 2rem;
+}
+
+.slider__toggle {
+  display: inline-block;
+  height: 1.5rem;
+  width: 3rem;
+  margin: 0rem .5rem;
+  background-color: #cdd7ee;
+  border-radius: 150rem;
+  position: relative;
+  padding: .2rem;
+  cursor: pointer;
+}
+
+.slider__toggle.active::before {
+  -webkit-transform: translateX(146%);
+          transform: translateX(146%);
+}
+
+.slider__toggle::before {
+  content: "";
+  display: block;
+  height: 100%;
+  width: 40%;
+  background-color: white;
+  border-radius: 50%;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.slider__discount {
+  color: #ff8c66;
+  background-color: #feece7;
+  padding: .2rem .5rem;
+  border-radius: 15px;
+  font-size: .8rem;
+  margin-left: .2rem;
+  -webkit-transform: translateY(1px);
+          transform: translateY(1px);
+}
+
+.slider label {
+  color: #858fad;
+  font-size: .85rem;
+}
+
+.cta {
+  border: none;
+  background-color: #293356;
+  font-family: inherit;
+  padding: .75rem 2.5rem;
+  color: #bdccff;
+  border-radius: 150rem;
+  font-weight: 800;
 }
 /*# sourceMappingURL=main.css.map */
