--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,3 +4,6 @@
 @import "./components/header";
 @import "./components/pricing";
 @import "./components/range";
+@import "./components/fakeRange";
+@import "./components/slider";
+@import "./components/cta";
