styles complete final version

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,5 @@
 @import "./variables/variables";
+@import "./animations/animations";
 @import "./global/global";
 @import "./global/typography";
 @import "./components/header";
