--- a/styles/components/_cta.scss
+++ b/styles/components/_cta.scss
@@ -1,9 +1,48 @@
 .cta{
     border: none;
-    background-color: $dark-desaturated-blue;
     font-family: inherit;
-    padding: .75rem 2.5rem;
-    color: $pale-blue;
+    position: relative;
     border-radius: 150rem;
-    font-weight: 800;
+    cursor: pointer;
+    
+    span{
+        position: relative;
+        display: inline-block;
+        padding: .75rem 2.5rem;
+        color: $pale-blue;
+        border-radius: 150rem;
+        font-weight: 800;
+        background-color: $dark-desaturated-blue;
+        z-index: 20000;
+    }
+
+    &::before, 
+    &::after{
+        content: "";
+        position: absolute;
+        width: calc(50% + 15px);
+        height: 100%;
+        background-color: darken($dark-desaturated-blue, 15%);
+    }
+
+    &::after{
+        top: 0;
+        right: 0;
+        border-radius: 0 150rem 150rem 0;
+    }
+
+    &::before{
+        top: 0;
+        left: 0;
+        border-radius: 150rem 0 0 150rem;
+        width: calc(50% + 16px);
+    }
+
+    &:hover::before{
+        animation: 1s ease-in-out forwards insideToLeft;
+    }
+
+    &:hover::after{
+        animation: 1s ease-in-out .2s forwards insideToRight;
+    }
 }
