--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,87 @@
+@-webkit-keyframes insideToRight {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  25% {
+    -webkit-transform: translateX(4px);
+            transform: translateX(4px);
+  }
+  50% {
+    -webkit-transform: scaleY(1.2) translateX(4px);
+            transform: scaleY(1.2) translateX(4px);
+    -webkit-transform-origin: center center;
+            transform-origin: center center;
+  }
+  100% {
+    -webkit-transform: scaleY(1.2) translateX(4px);
+            transform: scaleY(1.2) translateX(4px);
+  }
+}
+
+@keyframes insideToRight {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  25% {
+    -webkit-transform: translateX(4px);
+            transform: translateX(4px);
+  }
+  50% {
+    -webkit-transform: scaleY(1.2) translateX(4px);
+            transform: scaleY(1.2) translateX(4px);
+    -webkit-transform-origin: center center;
+            transform-origin: center center;
+  }
+  100% {
+    -webkit-transform: scaleY(1.2) translateX(4px);
+            transform: scaleY(1.2) translateX(4px);
+  }
+}
+
+@-webkit-keyframes insideToLeft {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  25% {
+    -webkit-transform: translateX(-4px);
+            transform: translateX(-4px);
+  }
+  50% {
+    -webkit-transform: scaleY(1.2) translateX(-4px);
+            transform: scaleY(1.2) translateX(-4px);
+    -webkit-transform-origin: center center;
+            transform-origin: center center;
+  }
+  100% {
+    -webkit-transform: scaleY(1.2) translateX(-4px);
+            transform: scaleY(1.2) translateX(-4px);
+  }
+}
+
+@keyframes insideToLeft {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  25% {
+    -webkit-transform: translateX(-4px);
+            transform: translateX(-4px);
+  }
+  50% {
+    -webkit-transform: scaleY(1.2) translateX(-4px);
+            transform: scaleY(1.2) translateX(-4px);
+    -webkit-transform-origin: center center;
+            transform-origin: center center;
+  }
+  100% {
+    -webkit-transform: scaleY(1.2) translateX(-4px);
+            transform: scaleY(1.2) translateX(-4px);
+  }
+}
+
 *,
 *::after,
 *::before {
@@ -207,7 +291,7 @@ p {
   background-color: #cdd7ee;
   border-radius: 150rem;
   position: relative;
-  padding: .2rem;
+  padding: .3rem;
   cursor: pointer;
 }
 
@@ -245,11 +329,51 @@ p {
 
 .cta {
   border: none;
-  background-color: #293356;
   font-family: inherit;
+  position: relative;
+  border-radius: 150rem;
+  cursor: pointer;
+}
+
+.cta span {
+  position: relative;
+  display: inline-block;
   padding: .75rem 2.5rem;
   color: #bdccff;
   border-radius: 150rem;
   font-weight: 800;
+  background-color: #293356;
+  z-index: 20000;
+}
+
+.cta::before, .cta::after {
+  content: "";
+  position: absolute;
+  width: calc(50% + 15px);
+  height: 100%;
+  background-color: #111422;
+}
+
+.cta::after {
+  top: 0;
+  right: 0;
+  border-radius: 0 150rem 150rem 0;
+}
+
+.cta::before {
+  top: 0;
+  left: 0;
+  border-radius: 150rem 0 0 150rem;
+  width: calc(50% + 16px);
+}
+
+.cta:hover::before {
+  -webkit-animation: 1s ease-in-out forwards insideToLeft;
+          animation: 1s ease-in-out forwards insideToLeft;
+}
+
+.cta:hover::after {
+  -webkit-animation: 1s ease-in-out .2s forwards insideToRight;
+          animation: 1s ease-in-out .2s forwards insideToRight;
 }
 /*# sourceMappingURL=main.css.map */
