--- a/styles/components/_pricing.scss
+++ b/styles/components/_pricing.scss
@@ -3,18 +3,32 @@
     border-radius: 15px;
     text-align: center;
     padding: 2.5rem 1rem;
-    margin-top: 2.5rem;
     box-shadow: 1px 1px 15px 1px rgba(#000, .08);
+    margin: 2.5rem auto 0 auto;
+    width: 100%;
 
-    // &__form{
+    @media screen and (min-width: 800px){
+        padding: 2.5rem 2rem;
+        max-width: 35rem;
+    }
 
-    // }
+    &__form{
+        @media screen and (min-width: 800px){
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-auto-rows: min-content;
+            align-items: center;
+        }
+    }
 
     &__views{
         text-transform: uppercase;
         color: $grayish-blue;
         font-weight: 600;
         letter-spacing: 2px;
+        @media screen and (min-width: 800px){
+            justify-self: start;
+        }
     }
 
     &__amount{
@@ -23,6 +37,12 @@
         justify-content: center;
         font-size: 2rem;
         color: $dark-desaturated-blue;
+        @media screen and (min-width: 800px){
+            grid-row: 1 / 2;
+            grid-column: 2 / 3;
+            justify-self: end;
+            font-size: 3rem;
+        }
 
         span:last-child{
             font-size: 1rem;
@@ -38,9 +58,16 @@
         margin-left: -1rem;
         margin-right: -1rem;
         color: rgba($grayish-blue, .15);
+
+        @media screen and (min-width: 800px){
+            grid-column: 1 / 3;
+            margin-left: -2rem;
+            margin-right: -2rem;
+        }
     }
 
     &__benefits{
+        
 
         li{
             display: flex;
@@ -48,6 +75,9 @@
             justify-content: center;
             color: $grayish-blue;
             margin: .5rem 0;
+            @media screen and (min-width: 800px){
+                justify-content: flex-start;
+            }
 
             img{
                 margin-right: .5rem;
@@ -55,7 +85,26 @@
         }
     }
 
+    &__group{
+        @media screen and (min-width: 800px){
+            grid-column: 1 / 3;
+        }
+    }
+
+    .slider{
+        @media screen and (min-width: 800px){
+            grid-column: 1 / 3;
+            margin-right: 1rem;
+        }
+    }
+
     button{
         margin-top: 2rem;
+
+        @media screen and (min-width: 800px){
+            grid-column: 2 / 3;
+            justify-self: end; 
+            align-self: start;
+        }
     }
 }
