--- a/styles/main.css
+++ b/styles/main.css
@@ -112,7 +112,7 @@ body {
   opacity: 0;
 }
 
-@media screen and (max-width: 1120px) {
+@media screen and (max-width: 800px) {
   .hide-for-mobile {
     display: none;
   }
@@ -158,9 +158,31 @@ p {
   border-radius: 15px;
   text-align: center;
   padding: 2.5rem 1rem;
-  margin-top: 2.5rem;
   -webkit-box-shadow: 1px 1px 15px 1px rgba(0, 0, 0, 0.08);
           box-shadow: 1px 1px 15px 1px rgba(0, 0, 0, 0.08);
+  margin: 2.5rem auto 0 auto;
+  width: 100%;
+}
+
+@media screen and (min-width: 800px) {
+  .pricing {
+    padding: 2.5rem 2rem;
+    max-width: 35rem;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .pricing__form {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    grid-auto-rows: -webkit-min-content;
+    grid-auto-rows: min-content;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .pricing__views {
@@ -168,6 +190,13 @@ p {
   color: #858fad;
   font-weight: 600;
   letter-spacing: 2px;
+}
+
+@media screen and (min-width: 800px) {
+  .pricing__views {
+    -ms-grid-column-align: start;
+        justify-self: start;
+  }
 }
 
 .pricing__amount {
@@ -182,6 +211,20 @@ p {
           justify-content: center;
   font-size: 2rem;
   color: #293356;
+}
+
+@media screen and (min-width: 800px) {
+  .pricing__amount {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2 / 3;
+    -ms-grid-column-align: end;
+        justify-self: end;
+    font-size: 3rem;
+  }
 }
 
 .pricing__amount span:last-child {
@@ -200,6 +243,16 @@ p {
   color: rgba(133, 143, 173, 0.15);
 }
 
+@media screen and (min-width: 800px) {
+  .pricing hr {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    margin-left: -2rem;
+    margin-right: -2rem;
+  }
+}
+
 .pricing__benefits li {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -214,12 +267,50 @@ p {
   margin: .5rem 0;
 }
 
+@media screen and (min-width: 800px) {
+  .pricing__benefits li {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
 .pricing__benefits li img {
   margin-right: .5rem;
 }
 
+@media screen and (min-width: 800px) {
+  .pricing__group {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .pricing .slider {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    margin-right: 1rem;
+  }
+}
+
 .pricing button {
   margin-top: 2rem;
+}
+
+@media screen and (min-width: 800px) {
+  .pricing button {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2 / 3;
+    -ms-grid-column-align: end;
+        justify-self: end;
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
+  }
 }
 
 .fakeRange {
@@ -322,9 +413,21 @@ p {
           transform: translateY(1px);
 }
 
+@media screen and (min-width: 800px) {
+  .slider__discount {
+    font-size: 1rem;
+  }
+}
+
 .slider label {
   color: #858fad;
   font-size: .85rem;
+}
+
+@media screen and (min-width: 800px) {
+  .slider label {
+    font-size: 1rem;
+  }
 }
 
 .cta {
