--- a/styles/animations/_animations.scss
+++ b/styles/animations/_animations.scss
@@ -23,3 +23,15 @@
         transform: scaleY(1.2) translateX(-4px);
     }
 }
+
+@keyframes leftToRight{
+    0%{
+        transform: translateX(0);
+    }25%{
+        transform: translateX(-2px);
+    }50%{
+        transform: translateX(2px);
+    }75%{
+        transform: translateX(0);
+    }
+}
